--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -7,6 +7,8 @@
 </head>
 
 <body class="light">
+<div class="mobile-menu-btn" onclick="toggleSidebar()">☰</div>
+<div class="overlay" onclick="toggleSidebar()"></div>
 
 <div class="app">
 
@@ -43,5 +45,6 @@
 <!-- CONTEXT MENU -->
 
 <script src="/static/script.js"></script>
+
 </body>
 </html>
